<resources>
    <string name="app_name">Uci</string>
    <string name="title_activity_class_kedua">ClassKedua</string>
    <string name="title_activity_relative">RelativeActivity</string>
    <string name="title_activity_tabel">ActivityTabel</string>
    <string name="title_activity_table_layout">TableLayout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_image">Image</string>
    <string name="title_activity_image_layout">ImageLayout</string>
    <string name="title_activity_image_view">ImageView</string>
    <string name="title_activity_contoh">ContohActivity</string>
    <string name="title_activity_autocomplete_sederhana">AutocompleteSederhana</string>
    <string name="hello">Hellow World, autocomplete!</string>
    <string name="perintah">Masukan minimal 3 huruf</string>
    <string name="toastTextBtn">Panggil Toast</string>
    <string name="exitTextBtn">Keluar Applikasi</string>
    <string name="listDialogTextBtn">Panggil List Dialog</string>
    <string name="title_activity_kotak_dialog">KotakDialog</string>
    <string name="title_activity_intent">IntentActivity</string>
    <string name="title_activity_intent2">Intent2Activity</string>
    <string name="title_activity_service_background">ServiceBackground</string>
    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>
    <string name="title_activity_picker">Picker</string>
    <string name="title_activity_check_box">CheckBox</string>
    <string name="checkBox">CheckBox ini : Tidak Dicentang</string>
    <string name="title_activity_radio_button">RadioButton</string>
    <string name="title_activity_widget">Widget</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_table">Table</string>
    <string name="title_activity_playing_audio">PlayingAudio</string>
    <string name="StopBtn">Stop</string>
    <string name="PauseBtn">Pause</string>
    <string name="title_activity_database">Database</string>
    <string name="btnAddtxt">Add</string>
    <string name="namaLabel">Nama</string>
    <string name="hobiLabel">Hobi</string>
    <string name="nomorLabel">No.</string>
    <string name="title_activity_database_manager">DatabaseManager</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="title_activity_web">Web</string>
</resources>
