<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_database"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="assalaam.linearlayoutserdahana.id.uci.Database">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayout" >
    <EditText
        android:id="@+id/inNama"
        android:layout_width="100dip"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/inHobi"
        android:layout_width="100dip"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_height="wrap_content"
        android:text="@string/btnAddtxt"/>
</LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tabel_data">
    <TableRow
            android:id="@+id/tabelRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="50dip"
        android:text="@string/nomorLabel"
        android:id="@+id/no_id"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:text="@string/namaLabel"
            android:id="@+id/nama_id"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="100dip"
            android:text="@string/hobiLabel"
            android:id="@+id/hobi_id"/>
        </TableRow>
    </TableLayout>
</LinearLayout>

